Trasferito tutte le funzioni build dentro le classi

--- a/css/Experiment_6.css
+++ b/css/Experiment_6.css
@@ -4,7 +4,7 @@
   position: relative;
 }
 
-#hand {
+.hand {
   background-color: #000;
   position: absolute;
   transform: translateX(-50%) rotate(0deg);
