--- a/main/style-page.css
+++ b/main/style-page.css
@@ -2,7 +2,7 @@
     margin: 0 auto;
     height: 1000px;
     width: 1000px;
-    background-color: lightslategrey;
+    background-color: rgb(80, 80, 80);
 }
 
 #controllers {
@@ -12,7 +12,7 @@
 }
 
 #rythmyc-view {
-    background-color: aqua;
+    background-color: rgb(50, 50, 50);
     height: 800px;
     width: 2000px;
     position: relative;
@@ -23,7 +23,8 @@
     position: relative;
     width: 300px;
     height: 700px;
-    border: 2px solid black;
+    border: 5px solid black;
+    margin: 5px;
 }
 
 #selector {
@@ -140,15 +141,15 @@
 
 #current-scope {
     position: relative;
-    background-color: white;
-    border: 3px solid black;
+    background-color: rgb(134, 134, 134);
+    border: 5px solid black;
     width: 230px;
     height: 140px;
 }
 
 #full-rec {
-    background-color: blanchedalmond;
-    border: 3px solid black;
+    background-color: rgb(158, 158, 158);
+    border: 5px solid black;
     width: 230px;
     height: 140px;
     position: relative;
