--- a/main/style-page.css
+++ b/main/style-page.css
@@ -1,5 +1,5 @@
 body {
-    margin: 0;
+    margin: 0 auto;
 }
 
 #root {
@@ -17,7 +17,7 @@ body {
 
 #rythmyc-view {
     background-color: rgb(114, 114, 114);
-    height: 55%;
+    height: 70%;
     width: 100%;
     position: absolute;
 }
@@ -55,10 +55,10 @@ body {
     width: 100px;
     height: 50px;
     position: absolute;
-    left: 70%;
+    left: 80%;
     top: 25px;
     border-radius: 20px;
-    border: 2px solid black;
+    border: 3px solid black;
     transition: 0.5s;
     cursor: pointer;
 }
@@ -110,20 +110,21 @@ body {
 }
 
 .top-button-container {
-    position: relative;
+    position: absolute;
     display: inline-block;
-    width: 275px;
-    height: 70px;
-    top: 25px;
-    left: 300px
+    width: 250px;
+    height: 60px;
+    top: 5px;
+    left: 40%;
+    border: 4px solid black;
+    margin: 0 auto;
 }
 
 #play {
-    position: relative;
+    position: absolute;
     display: inline-block;
-    margin-left: 20px;
-    margin-right: 20px;
-    margin-top: 20px;
+    left: 8%;
+    top: 15%;
     width: 0;
     height: 0;
     border-top: 20px solid transparent;
@@ -137,14 +138,15 @@ body {
 }
 
 #stop {
-    position: relative;
-    background-color: red;
-    display: inline-block;
-    margin-top: 25px;
-    margin-right: 25px;
-    height: 40px;
+    position: absolute;
+    top: 15%;
+    left: 77%;
+    display: block;
     width: 40px;
-    opacity: 0.8;
+    height: 40px;
+    cursor: pointer;
+    opacity: 1;
+    background-color: red;
 }
 
 #stop:hover {
@@ -152,25 +154,26 @@ body {
 }
 
 #loop {
-    position: relative;
-    display: inline-block;
+    position: absolute;
+    display: block;
     width: 25px;
     height: 25px;
-    margin-top: 20px;
-    margin-right: 20px;
     border: 5px solid #0074d9;
     border-radius: 75%;
     border-right-color: transparent;
+    top: 20%;
+    left: 30%;
 }
 
 #rec {
-    position: relative;
+    position: absolute;
     background-color: red;
-    display: inline-block;
-    margin-right: 20px;
+    display: block;
+    left: 52%;
     height: 40px;
     width: 40px;
     border-radius: 50%;
+    top: 15%;
 }
 
 .clock {
@@ -201,11 +204,11 @@ body {
 }
 
 #canvasCont {
-    position: relative;
+    position: absolute;
     width: 500px;
     height: 150px;
-    left: 400px;
-    top: -150px;
+    left: 34%;
+    top: 40%;
 }
 
 #selectorContainer {
@@ -223,7 +226,7 @@ body {
 }
 
 #full-rec {
-    background-color: rgb(158, 158, 158);
+    background-color: rgb(134, 134, 134);
     border: 5px solid black;
     width: 230px;
     height: 140px;
