--- a/main/style-page.css
+++ b/main/style-page.css
@@ -17,16 +17,16 @@ body {
 
 #rythmyc-view {
     background-color: rgb(114, 114, 114);
-    height: 70%;
+    height: 925px;
     width: 100%;
     position: absolute;
 }
 
 #section {
     display: inline-block;
-    position: relative;
+    position: absolute;
     width: 300px;
-    height: 90%;
+    height: 905px;
     border: 5px solid black;
     margin: 5px;
 }
@@ -177,9 +177,10 @@ body {
 }
 
 .clock {
-    background-color: white;
-    border-radius: 50%;
     position: relative;
+    display: inline-block;
+    border-radius: 50%;
+    background-color: white;
 }
 
 .hand {
@@ -251,6 +252,8 @@ body {
 #addsection {
     display: inline-block;
     margin: auto;
+    height: 50px;
+
 }
 
 #waitreccanvas {
@@ -265,6 +268,6 @@ body {
 }
 
 #addsectioncanvas {
-    position: relative;
+    position: absolute;
     display: inline-block;
 }
