--- a/main/style-page.css
+++ b/main/style-page.css
@@ -1,10 +1,10 @@
 body {
     margin: 0 auto;
+    background-color: rgb(163, 127, 49);
 }
 
 #root {
     margin: 0 auto;
-    background-color: rgb(80, 80, 80);
     padding: 0%;
 }
 
@@ -12,14 +12,13 @@ body {
     height: 300px;
     width: 100%;
     position: relative;
-    background-color: rgb(211, 211, 211);
 }
 
 #rythmyc-view {
-    background-color: rgb(114, 114, 114);
     height: 925px;
-    width: 100%;
+    width: 1260px;
     position: absolute;
+    left: 13.7%;
 }
 
 #section {
@@ -27,8 +26,9 @@ body {
     position: absolute;
     width: 300px;
     height: 905px;
-    border: 5px solid black;
+    border: 4px solid black;
     margin: 5px;
+    background-color: #616ca8;
 }
 
 #selector {
@@ -123,13 +123,13 @@ body {
 #play {
     position: absolute;
     display: inline-block;
-    left: 8%;
-    top: 15%;
+    left: 1200px;
+    top: 50%;
     width: 0;
     height: 0;
-    border-top: 20px solid transparent;
-    border-bottom: 20px solid transparent;
-    border-left: 30px solid green;
+    border-top: 40px solid transparent;
+    border-bottom: 40px solid transparent;
+    border-left: 60px solid green;
     opacity: 0.8;
 }
 
@@ -139,11 +139,11 @@ body {
 
 #stop {
     position: absolute;
-    top: 15%;
-    left: 77%;
+    top: 70%;
+    left: 400px;
     display: block;
-    width: 40px;
-    height: 40px;
+    width: 60px;
+    height: 60px;
     cursor: pointer;
     opacity: 1;
     background-color: red;
@@ -156,19 +156,19 @@ body {
 #loop {
     position: absolute;
     display: block;
-    width: 25px;
-    height: 25px;
+    width: 40px;
+    height: 40px;
     border: 5px solid #0074d9;
     border-radius: 75%;
-    top: 20%;
-    left: 30%;
+    top: 50%;
+    left: 405px;
 }
 
 #rec {
     position: absolute;
     background-color: red;
     display: block;
-    left: 52%;
+    left: 20%;
     height: 40px;
     width: 40px;
     border-radius: 50%;
@@ -274,4 +274,20 @@ body {
     position: relative;
     background-color: black;
     border-radius: 50%;
+}
+
+#addbuttonimg {
+    width: 50px;
+    position: relative;
+    left: 125px;
+    top: 5px;
+    transition: 0.5s;
+}
+
+#addbuttonimg:hover {
+    width: 50px;
+    position: relative;
+    left: 125px;
+    top: 5px;
+    transform: rotate(90deg);
 }
