--- a/main/style-page.css
+++ b/main/style-page.css
@@ -1,6 +1,6 @@
 body {
     margin: 0 auto;
-    background-color: rgb(163, 127, 49);
+    background-color: #d6e0f0
 }
 
 #root {
@@ -28,7 +28,7 @@ body {
     height: 905px;
     border: 4px solid black;
     margin: 5px;
-    background-color: #616ca8;
+    background-color: #8d93ab
 }
 
 #selector {
@@ -121,47 +121,71 @@ body {
 }
 
 #play {
-    position: absolute;
     display: inline-block;
-    left: 1200px;
-    top: 50%;
-    width: 0;
-    height: 0;
-    border-top: 40px solid transparent;
-    border-bottom: 40px solid transparent;
-    border-left: 60px solid green;
-    opacity: 0.8;
+    margin: auto;
+    height: 50px;
 }
 
-#play:hover {
-    opacity: 1;
+#play-img {
+    width: 50px;
+    position: relative;
+    left: 1225px;
+    top: 175px;
+    transition: 0.5s;
 }
 
 #stop {
-    position: absolute;
-    top: 70%;
-    left: 400px;
-    display: block;
-    width: 60px;
-    height: 60px;
-    cursor: pointer;
-    opacity: 1;
-    background-color: red;
+    display: inline-block;
+    margin: auto;
+    height: 50px;
+}
+
+#stop-img {
+    width: 50px;
+    position: relative;
+    left: 1100px;
+    top: 175px;
+    transition: 0.5s;
 }
 
 #stop:hover {
     opacity: 1;
 }
 
-#loop {
-    position: absolute;
-    display: block;
-    width: 40px;
-    height: 40px;
-    border: 5px solid #0074d9;
-    border-radius: 75%;
-    top: 50%;
-    left: 405px;
+#create-clock {
+    display: inline-block;
+    margin: auto;
+    height: 50px;
+}
+
+#create-clock-img {
+    width: 50px;
+    position: relative;
+    left: 400px;
+    top: 175px;
+    transition: 0.5s;
+}
+
+#create-clock-img:hover {
+    width: 50px;
+    position: relative;
+    left: 400px;
+    top: 175px;
+    transform: rotate(180deg);
+}
+
+#resume-ctx {
+    display: inline-block;
+    margin: auto;
+    height: 50px;
+}
+
+#resume-ctx-img {
+    width: 50px;
+    position: relative;
+    left: 420px;
+    top: 175px;
+    transition: 0.5s;
 }
 
 #rec {
