--- a/main/style-page.css
+++ b/main/style-page.css
@@ -1,6 +1,6 @@
 body {
     margin: 0 auto;
-    background-color: #d6e0f0
+    background-color: #f8f1f1
 }
 
 #root {
@@ -26,9 +26,9 @@ body {
     position: absolute;
     width: 300px;
     height: 905px;
-    border: 4px solid black;
+    border: 4px solid #db6400;
     margin: 5px;
-    background-color: #8d93ab
+    background-color: #ffa62b;
 }
 
 #selector {
@@ -145,11 +145,13 @@ body {
     position: relative;
     left: 1100px;
     top: 175px;
-    transition: 0.5s;
+    transition: 0.2s;
+    border-radius: 8px;
 }
 
-#stop:hover {
+#stop-img:hover {
     opacity: 1;
+    background-color: red;
 }
 
 #create-clock {
@@ -171,7 +173,7 @@ body {
     position: relative;
     left: 400px;
     top: 175px;
-    transform: rotate(180deg);
+    transform: rotate(90deg);
 }
 
 #resume-ctx {
@@ -203,7 +205,7 @@ body {
     position: relative;
     display: inline-block;
     border-radius: 50%;
-    background-color: white;
+    background-color: #16697a;
 }
 
 .hand {
@@ -314,4 +316,19 @@ body {
     left: 125px;
     top: 5px;
     transform: rotate(90deg);
+}
+
+#rem-clock-img {
+    width: 40px;
+    top: 50px;
+    position: relative;
+    left: 15px;
+    transition: 0.2s;
+    border-radius: 50%;
+}
+
+#rem-clock-img:hover {
+    transform: rotate(90deg);
+    background-color: red;
+    border-radius: 50%;
 }
