--- a/main/style-page.css
+++ b/main/style-page.css
@@ -8,17 +8,31 @@ body {
     padding: 0%;
 }
 
+#controllers-container {
+  position: relative;
+  width: 100%;
+  height: 300px;
+  display: flex;
+  justify-content: center;
+}
+
 #controllers {
     height: 300px;
-    width: 100%;
+    width: 1265px;
     position: relative;
+}
+
+#rythmyc-view-container {
+    position: absolute;
+    width: 100%;
+    display: flex;
+    justify-content: center;
 }
 
 #rythmyc-view {
     height: 925px;
-    width: 1260px;
-    position: absolute;
-    left: 13.7%;
+    width: 1265px;
+    position: relative;
 }
 
 #section {
@@ -26,17 +40,18 @@ body {
     position: absolute;
     width: 300px;
     height: 905px;
-    border: 4px solid #db6400;
+    border: 4px solid #d99257;
     margin: 5px;
-    background-color: #ffa62b;
+    background-color: #ffd295;;
 }
 
 #selector {
-    width: 150px;
-    height: 150px;
+    width: 142px;
+    height: 142px;
     border-radius: 50%;
-    margin-left: 20px;
-    border: 5px solid black;
+    border: 4px solid black;
+    top:50%;
+    transform: translateY(50%);
 }
 
 #bpm-value {
@@ -55,8 +70,11 @@ body {
     width: 100px;
     height: 50px;
     position: absolute;
-    left: 80%;
-    top: 25px;
+    right: 1%;
+    top: 50%;
+    transform: translateY(-50%);
+    /*left: 80%;
+    top: 25px;*/
     border-radius: 20px;
     border: 3px solid black;
     transition: 0.5s;
@@ -121,30 +139,38 @@ body {
 }
 
 #play {
+    position:absolute;
     display: inline-block;
     margin: auto;
     height: 50px;
+    top: 50%;
+    left:10%;
+    transform: translateY(-50%);
 }
 
 #play-img {
     width: 50px;
     position: relative;
-    left: 1225px;
-    top: 175px;
+    /*left: 1225px;
+    top: 175px;*/
     transition: 0.5s;
 }
 
 #stop {
+    position:absolute;
     display: inline-block;
     margin: auto;
     height: 50px;
+    top: 50%;
+    right:10%;
+    transform: translateY(-50%);
 }
 
 #stop-img {
     width: 50px;
     position: relative;
-    left: 1100px;
-    top: 175px;
+    /*left: 1100px;
+    top: 175px;*/
     transition: 0.2s;
     border-radius: 8px;
 }
@@ -156,37 +182,42 @@ body {
 
 #create-clock {
     display: inline-block;
+    position:absolute;
     margin: auto;
     height: 50px;
+    top:50%;
+    transform: translateY(-50%);
 }
 
 #create-clock-img {
+    position:absolute;
     width: 50px;
-    position: relative;
-    left: 400px;
-    top: 175px;
+    /*left: 400px;
+    top: 175px;*/
     transition: 0.5s;
 }
 
 #create-clock-img:hover {
     width: 50px;
     position: relative;
-    left: 400px;
-    top: 175px;
+    /*left: 400px;
+    top: 175px;*/
     transform: rotate(90deg);
 }
 
 #resume-ctx {
+    position: absolute;
     display: inline-block;
     margin: auto;
-    height: 50px;
+    height: 20px;
+    right: 0px;
 }
 
 #resume-ctx-img {
-    width: 50px;
+    width: 20px;
     position: relative;
-    left: 420px;
-    top: 175px;
+    /*left: 420px;
+    top: 175px;*/
     transition: 0.5s;
 }
 
@@ -231,33 +262,54 @@ body {
 
 #canvasCont {
     position: absolute;
-    width: 500px;
+    width: 755px;
     height: 150px;
-    left: 34%;
-    top: 40%;
+    left: 50%;
+    top: 50%;
+    transform: translateX(-50%) translateY(-50%);
+}
+
+.button-container {
+  position: relative;
+  display: inline-block;
+  /*background-color: green;
+  top:50%;
+  left:25%;
+  transform: translateY(-50%);*/
+  width: 100px;
+  height: 150px;
+  left: 5px;
+}
+
+#button-container2 {
+  width: 150px;
 }
 
 #selectorContainer {
-    width: 200px;
-    height: 200px;
-    position: relative;
+    /*width: 200px;
+    height: 100%;*/
+    left:1%;
+    position: absolute;
 }
 
 #current-scope {
     position: relative;
+    display: inline-block;
     background-color: rgb(134, 134, 134);
-    border: 5px solid black;
+    border: 4px solid black;
     width: 230px;
-    height: 140px;
+    height: 142px;
+    left:5px;
 }
 
 #full-rec {
     background-color: rgb(134, 134, 134);
-    border: 5px solid black;
+    border: 4px solid black;
     width: 230px;
-    height: 140px;
+    height: 142px;
     position: relative;
-    left: 5px;
+    display: inline-block;
+    left: 4px;
 }
 
 #addclockcanvas {
