--- a/main/style-page.css
+++ b/main/style-page.css
@@ -236,7 +236,7 @@ body {
     position: relative;
     display: inline-block;
     border-radius: 50%;
-    background-color: #16697a;
+    background-color: #808080;
 }
 
 .hand {
