--- a/main/style-page.css
+++ b/main/style-page.css
@@ -334,9 +334,9 @@ position: absolute;
 }
 
 #addsection {
-    display: inline-block;
+    /*display: inline-block;*/
     margin: auto;
-    height: 50px;
+    height: 0px;
 }
 
 #waitreccanvas {
@@ -364,7 +364,7 @@ position: absolute;
 #addbuttonimg {
     width: 50px;
     position: relative;
-    left: 125px;
+    left: 245px;
     top: 5px;
     transition: 0.5s;
 }
@@ -372,7 +372,7 @@ position: absolute;
 #addbuttonimg:hover {
     width: 50px;
     position: relative;
-    left: 125px;
+    left: 245px;
     top: 5px;
     transform: rotate(90deg);
 }
